Sorted out app-level layout issues. All moved to flexbox now.

--- a/src/less/base/elements/icon.less
+++ b/src/less/base/elements/icon.less
@@ -1,5 +1,6 @@
 .icon {
-  min-width: 2rem;
+  display: inline-block;
+  min-width: 4rem;
 
   font-size: 1.8rem;
   text-align: center;
