--- a/src/less/topsoil/components/navigation-drawer.less
+++ b/src/less/topsoil/components/navigation-drawer.less
@@ -5,22 +5,30 @@ navigation-drawer mixins
 
 Application level navigation
 */
+
+
 .navigation-drawer {
   .navigation-menu;
   
+  width: 20rem;
+
+  position: fixed;
   position: fixed;
   z-index: 1000;
-  top: 5rem;
-  // left: 0;
-  // bottom: 0;
-  padding: 0.5rem;
-  width: 18rem;
-  overflow: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
 
   transform: translateX(-100%);
   visibility: hidden;
 
   &.is-off-screen {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    bottom: 0;
+
     transform: translateX(-100%);
     transition: 500ms cubic-bezier(0.09, 0.68, 0, 0.99);
     visibility: hidden;
@@ -34,6 +42,20 @@ Application level navigation
   header,
   footer {
     margin-bottom: 2rem;
+  }
+
+  header {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+
+    height: 4rem;
+    font-size: 1.5rem;
+    padding: 0;
+
+    a, .icon {
+      line-height: 4rem;
+    }
   }
 }
 
@@ -76,11 +98,16 @@ Application level navigation
     margin: 0;
     padding: 0;
   }
-  ul {
-    margin-left: 1.9rem;
-  }
-  li {
-    margin-top: 0.2rem;
+
+  nav {
+    padding: 0.5rem;
+
+    ul {
+      margin-left: 1.9rem;
+    }
+    li {
+      margin-top: 0.2rem;
+    }
   }
 }
 
@@ -90,9 +117,19 @@ Application level navigation
 
   .navigation-drawer { 
     position: static;
-    width: 18rem;
+    width: 20rem;
     visibility: visible;
     transform: translateX(0);
+
+    header {
+      display: none;
+    }
+
+    &.is-off-screen.is-visible {
+      header {
+        display: block;
+      }
+    }
   }
 
 }
